Atualiza notebook de visualização com análises de insumos e ajustes

--- a/notebooks/Modulo2_Manipulando_Dados.ipynb
+++ b/notebooks/Modulo2_Manipulando_Dados.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "29aa32fc",
    "metadata": {},
    "outputs": [
@@ -43,42 +43,42 @@
          "type": "string"
         }
        ],
-       "ref": "d47a57f7-eaf6-4bf7-8a4d-932c8f290fc6",
+       "ref": "72be1dc9-77b7-49f0-bd8d-37f7cc43d833",
        "rows": [
         [
          "0",
          "1",
          "João",
          "34",
-         "Recife"
+         "Picos"
         ],
         [
          "1",
          "2",
          "Maria",
          "28",
-         "Olinda"
+         "Picos"
         ],
         [
          "2",
          "3",
          "Carlos",
          "45",
-         "Jaboatão"
+         "Picos"
         ],
         [
          "3",
          "4",
          "Ana",
          "22",
-         "Paulista"
+         "Picos"
         ],
         [
          "4",
          "5",
          "Pedro",
          "39",
-         "Recife"
+         "Picos"
         ]
        ],
        "shape": {
@@ -117,47 +117,47 @@
        "      <td>1</td>\n",
        "      <td>João</td>\n",
        "      <td>34</td>\n",
-       "      <td>Recife</td>\n",
+       "      <td>Picos</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>Maria</td>\n",
        "      <td>28</td>\n",
-       "      <td>Olinda</td>\n",
+       "      <td>Picos</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>Carlos</td>\n",
        "      <td>45</td>\n",
-       "      <td>Jaboatão</td>\n",
+       "      <td>Picos</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
        "      <td>Ana</td>\n",
        "      <td>22</td>\n",
-       "      <td>Paulista</td>\n",
+       "      <td>Picos</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
        "      <td>Pedro</td>\n",
        "      <td>39</td>\n",
-       "      <td>Recife</td>\n",
+       "      <td>Picos</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   cliente_id    nome  idade    cidade\n",
-       "0           1    João     34    Recife\n",
-       "1           2   Maria     28    Olinda\n",
-       "2           3  Carlos     45  Jaboatão\n",
-       "3           4     Ana     22  Paulista\n",
-       "4           5   Pedro     39    Recife"
+       "   cliente_id    nome  idade cidade\n",
+       "0           1    João     34  Picos\n",
+       "1           2   Maria     28  Picos\n",
+       "2           3  Carlos     45  Picos\n",
+       "3           4     Ana     22  Picos\n",
+       "4           5   Pedro     39  Picos"
       ]
      },
      "metadata": {},
@@ -210,7 +210,7 @@
          "type": "string"
         }
        ],
-       "ref": "1275e98e-4360-490f-b481-61cff0a9746f",
+       "ref": "050fb07b-dc66-4377-83ae-f3fa44a1234e",
        "rows": [
         [
          "0",
@@ -384,7 +384,7 @@
          "type": "float"
         }
        ],
-       "ref": "38e03076-a258-4a0f-b847-c13c5c73e667",
+       "ref": "f9581892-1e70-4116-a827-bf729302b3fc",
        "rows": [
         [
          "0",
@@ -525,37 +525,37 @@
          "type": "float"
         }
        ],
-       "ref": "f21300cc-47b3-47ba-a25b-80f72cf5ecde",
+       "ref": "f7d962a3-9849-4dcd-abe3-e0bc65cb7ae5",
        "rows": [
         [
          "0",
-         "2016-01-05",
+         "2016-01-01",
          "Aluguel",
          "900.0"
         ],
         [
          "1",
-         "2016-01-05",
+         "2016-01-01",
          "Salário",
          "1800.0"
         ],
         [
          "2",
-         "2016-01-05",
+         "2016-01-01",
          "Insumos",
          "400.0"
         ],
         [
          "3",
-         "2017-02-10",
-         "Aluguel",
-         "950.0"
+         "2016-01-01",
+         "Marketing",
+         "200.0"
         ],
         [
          "4",
-         "2017-02-10",
-         "Salário",
-         "1900.0"
+         "2016-02-01",
+         "Aluguel",
+         "900.0"
         ]
        ],
        "shape": {
@@ -590,33 +590,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2016-01-05</td>\n",
+       "      <td>2016-01-01</td>\n",
        "      <td>Aluguel</td>\n",
        "      <td>900.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2016-01-05</td>\n",
+       "      <td>2016-01-01</td>\n",
        "      <td>Salário</td>\n",
        "      <td>1800.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2016-01-05</td>\n",
+       "      <td>2016-01-01</td>\n",
        "      <td>Insumos</td>\n",
        "      <td>400.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2017-02-10</td>\n",
-       "      <td>Aluguel</td>\n",
-       "      <td>950.0</td>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>Marketing</td>\n",
+       "      <td>200.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2017-02-10</td>\n",
-       "      <td>Salário</td>\n",
-       "      <td>1900.0</td>\n",
+       "      <td>2016-02-01</td>\n",
+       "      <td>Aluguel</td>\n",
+       "      <td>900.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -624,11 +624,11 @@
       ],
       "text/plain": [
        "         data despesa_tipo   valor\n",
-       "0  2016-01-05      Aluguel   900.0\n",
-       "1  2016-01-05      Salário  1800.0\n",
-       "2  2016-01-05      Insumos   400.0\n",
-       "3  2017-02-10      Aluguel   950.0\n",
-       "4  2017-02-10      Salário  1900.0"
+       "0  2016-01-01      Aluguel   900.0\n",
+       "1  2016-01-01      Salário  1800.0\n",
+       "2  2016-01-01      Insumos   400.0\n",
+       "3  2016-01-01    Marketing   200.0\n",
+       "4  2016-02-01      Aluguel   900.0"
       ]
      },
      "metadata": {},
@@ -661,7 +661,7 @@
          "type": "float"
         }
        ],
-       "ref": "1d2e8fd5-3e6b-4af8-9cde-0b0b0c3b40d8",
+       "ref": "ddeba5ce-5164-4486-b4ce-f55c7545115c",
        "rows": [
         [
          "0",
@@ -786,7 +786,7 @@
          "type": "float"
         }
        ],
-       "ref": "b829535d-00b2-4f5b-95d1-4eeb7143d1bb",
+       "ref": "fb706a32-fd80-4e63-8760-cf0387eaec33",
        "rows": [
         [
          "2016-01-05 00:00:00",
@@ -1066,7 +1066,7 @@
          "type": "integer"
         }
        ],
-       "ref": "52259339-d303-4b56-b74b-372452e7e327",
+       "ref": "fa3f9991-170c-4a94-99fe-4d08d59a47e4",
        "rows": [
         [
          "(np.int32(2016), np.uint32(1))",
@@ -1246,7 +1246,7 @@
          "type": "integer"
         }
        ],
-       "ref": "17a46a62-118f-41fd-b9eb-b74bbb83eaf8",
+       "ref": "47d03945-9b7d-4321-9b53-d3c612701633",
        "rows": [
         [
          "(np.int32(2016), np.int32(1))",
@@ -1426,7 +1426,7 @@
          "type": "integer"
         }
        ],
-       "ref": "1cbde5bb-2b94-4f87-b3a8-7eccb33528ab",
+       "ref": "a3be349d-7fcb-4e20-93e5-c3ce011f3556",
        "rows": [
         [
          "2016",
@@ -1590,7 +1590,7 @@
          "type": "float"
         }
        ],
-       "ref": "fadcc5d1-f403-4a80-bd21-d974fa407ede",
+       "ref": "8bbe3621-969a-4f32-99a0-eb438a43c891",
        "rows": [
         [
          "0",
@@ -1885,7 +1885,7 @@
          "type": "float"
         }
        ],
-       "ref": "9db0d676-e46a-4f97-961b-17481aec9666",
+       "ref": "7dbd133a-9696-4954-a98b-444f43daa1c8",
        "rows": [
         [
          "0",
@@ -2221,7 +2221,7 @@
          "type": "float"
         }
        ],
-       "ref": "b714a2b8-7803-413d-a784-542b2de09f40",
+       "ref": "f8313297-0ef5-484a-8043-81d2463341f6",
        "rows": [
         [
          "0",
@@ -2552,7 +2552,7 @@
          "type": "float"
         }
        ],
-       "ref": "f997b07c-d453-44b2-8763-1058e6e5bddc",
+       "ref": "4b6ab739-a375-40af-989d-23a785b716c7",
        "rows": [
         [
          "0",
@@ -2728,7 +2728,7 @@
          "type": "float"
         }
        ],
-       "ref": "7f7af6cc-4896-4a51-91c7-ab9a673e28d1",
+       "ref": "5ee8233b-32ba-4faa-beb6-fdc5d2988402",
        "rows": [
         [
          "Hamburguer",
